--- a/back-end/pyproject.toml
+++ b/back-end/pyproject.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
-pyrebase4 = "^4.8.0"
+sqlalchemy = "^2.0.40"
+bcrypt = "^4.3.0"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.34.0"
