--- a/back-end/pyproject.toml
+++ b/back-end/pyproject.toml
@@ -8,6 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
+sqlalchemy = "^2.0.40"
+bcrypt = "^4.3.0"
+psycopg2 = "^2.9.9"
+requests = "^2.31.0"
+python-dotenv = "^1.0.1"
+pydantic = "^2.6.4"
+passlib = "^1.7.4"
+python-jose = "^3.3.0"  # para `jose`
+pyjwt = "^2.8.0"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.34.0"
