--- a/back-end/pyproject.toml
+++ b/back-end/pyproject.toml
@@ -10,13 +10,13 @@ python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.8"}
 sqlalchemy = "^2.0.40"
 bcrypt = "^4.3.0"
-psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
 pydantic = "^2.6.4"
 passlib = "^1.7.4"
 python-jose = "^3.3.0"
 pyjwt = "^2.8.0"
 dotenv = "^0.9.9"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 uvicorn = "^0.34.0"
