fix: Ajustando parâmetros do dockerfile

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,18 +1,4 @@
-# 1- Build do projeto
-FROM python:3.12-slim as builder
-
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-RUN pip install poetry
-
-WORKDIR /app
-
-COPY pyproject.toml poetry.lock* ./
-
-RUN poetry install --without dev --no-root --no-interaction --no-ansi
-
-# 2- Produção
+# Build do projeto
 FROM python:3.12-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -20,8 +6,13 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-COPY --from=builder /usr/local/lib/python3.12/site-packages /usr/local/lib/python3.12/site-packages
-COPY --from=builder /usr/local/bin/uvicorn /usr/local/bin/uvicorn
+RUN pip install poetry
+
+RUN poetry config virtualenvs.create false
+
+COPY pyproject.toml poetry.lock* ./
+
+RUN poetry install --no-dev --no-interaction --no-ansi
 
 COPY ./app ./app
 
