--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -12,7 +12,7 @@ RUN poetry config virtualenvs.create false
 
 COPY pyproject.toml poetry.lock* ./
 
-RUN poetry install --no-dev --no-interaction --no-ansi
+RUN poetry install --without dev --no-interaction --no-ansi
 
 COPY ./app ./app
 
